# zana

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  PRIVACY.md  QA_CHECKLIST.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  issue.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: API.md  ARCHITECTURE.md  HOOK_HANDLER_GUIDE.md  INTEGRATION_SPEC.md  KVOICE_COMPLETION_SPEC.md  MIGRATION.md  ONBOARDING_PLAN.md  PLUGIN_DEVELOPMENT.md  README.md  USER_GUIDE.md  UX_POLISH_IMPLEMENTATION.md  ZANA_COMPLETION_SPEC.md
interactive-doc-site/: package.json  server.mjs
interactive-doc-site/data/: site.json
interactive-doc-site/exports/: summary.md
interactive-doc-site/public/: app.css  app.js  index.html
plugins/nebula-aura/: plugin.toml
plugins/nebula-aura-gpu/: plugin.toml
plugins/nebula-aura-gpu/src/: renderer.js
plugins/nebula-aura-gpu/src/shaders/: bloom.wgsl  nebula.wgsl
plugins/nebula-aura/src/: render.js
scripts/: build-macos.sh  cut-release.sh  release-macos.sh  sign-and-notarize.sh
src/: Cargo.toml  errors.rs  fn_key_monitor.rs  lib.rs  main.rs  state.rs
src-tauri/: Cargo.toml  Info.plist  build.rs  dmg-background.html  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  onboarding.rs  panel.rs  state.rs
src-tauri/src/audio/: capture.rs  mod.rs
src-tauri/src/commands/: audio.rs  diagnostics.rs  mod.rs  onboarding.rs  plugins.rs  settings.rs  transcription.rs  update.rs
src-tauri/src/hooks/: bus.rs  event.rs  handler.rs  mod.rs  system_handlers.rs
src-tauri/src/plugins/: gpu.rs  hook_adapter.rs  manager.rs  manifest.rs  mod.rs  registry.rs  traits.rs
src-tauri/src/stt/: downloader.rs  mod.rs  whisper.rs
src-tauri/tests/: app_contracts.rs
src-ui/: ORB_CONFIG.md  about.html  app.js  app.v1.js  index.html  notifications.js  onboarding.html  orb-fire-v2.js  orb-fire-v3.js  orb-fire-v4.js  orb-fire-v5.js  orb-fire-v6.js  orb-fire-v7.js  orb-fire-v8.js  orb-fire.js  orb-lifecycle.js  orb-nebula.js  orb-runtime.js  orb-styles.js  orb.html  orb_config.json  preferences.html  styles.css  transcriptions.html
src-ui/src/components/orb/: GpuOrbRenderer.vue
src/audio/: capture.rs  mod.rs
src/commands/: audio.rs  mod.rs  transcription.rs
src/gui/: app.rs  dialogs.rs  event_handler.rs  mod.rs  notifications.rs  orb.rs  settings.rs  shortcuts.rs  tests.rs
src/hooks/: bus.rs  event.rs  handler.rs  mod.rs
src/plugins/: gpu.rs  loader.rs  manifest.rs  mod.rs
src/stt/: mod.rs  whisper.rs
tests/: integration.rs
